<resources>
    <string name="app_name">GradeRecorder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">GradeRecorder</string>
    <string name="title_activity_course_list">Courses</string>
    <string name="no_courses">No courses</string>
    <string name="menu_owners_title">Course owners</string>
    <string name="menu_owners_title_condensed">Owners</string>
    <string name="menu_owner_add_title">Add owner</string>
    <string name="menu_owner_add_title_condensed">Add</string>
    <string name="menu_students_title">Students in course</string>
    <string name="menu_students_title_condensed">Students</string>
    <string name="dialog_course_add_title">Add course</string>
    <string name="dialog_course_edit_title">Edit course</string>
    <string name="dialog_course_hint">Course name</string>
    <string name="dialog_owner_add_title">Add owner</string>
    <string name="dialog_owner_edit_title">Edit owner</string>

    <string name="dialog_assignment_add_title">Add assignment</string>
    <string name="dialog_assignment_edit_title">Edit assignment</string>
    <string name="dialog_assignment_name_hint">Assignment name</string>
    <string name="dialog_assignment_max_grade_hint">Max grade</string>

    <string name="dialog_student_add_title">Add student</string>
    <string name="dialog_student_edit_title">Edit student</string>
    <string name="dialog_student_first_name_hint">First name</string>
    <string name="dialog_student_last_name_hint">Last name</string>
    <string name="dialog_student_rose_username_hint">Rose username</string>
    <string name="dialog_student_team_hint">Team</string>


    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="remove_question_format">Remove %s?</string>
    <string name="title_activity_assignment_list">Assignments</string>
    <string name="title_activity_owners_list">Owners</string>
    <string name="title_activity_student_list">Students</string>
    <string name="title_activity_grade_entry_list">GradeEntries</string>
    <string name="no_assignments">No assignments</string>
    <string name="dialog_owner_remove_title">Remove owner</string>
    <string name="dialog_owner_remove_message_format">Are you sure you want to remove %s?</string>
    <string name="no_owners">No owners</string>
    <string name="dialog_owner_hint">Owner name</string>
    <string name="sign_out">Sign out</string>


    <string name="context_title_assignment">Select assignment(s)</string>
    <string name="fragment_title_course">Select a course</string>
    <string name="title_activity_grade_recorder">GradeRecorderActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="grade_recorder">GradeRecorder</string>

    <!-- Sign in -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_with_rosefire">Sign in with Rosefire</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="login_error">Login Error!</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_hint">Comment</string>

</resources>
